syntax = "proto3";

import "google/protobuf/duration.proto";

package pkghttp;

message Call {
  string method = 1;
  string path = 2;
  map<string, string> request_header = 3;
  map<string, string> request_form = 4;
  map<string, string> response_header = 5;
  uint32 status_code = 6;
  google.protobuf.Duration duration = 7;
  string write_error = 8;
  string panic_error = 9;
  string panic_stack = 10;
}

message ServerCouldNotStart {
  string error = 1;
}

message ServerStarting {
}

message ServerFinished {
  string error = 1;
  google.protobuf.Duration duration = 2;
}
